docker_data_2/spark-k8s/spark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: spark
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark
      component: master
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: spark
        component: master
    spec:
      containers:
        - image: satish0308/spark_s3:latest
          name: spark-master
          command: ["/home/spark/bin/spark-class", "org.apache.spark.deploy.master.Master"]
          ports:
            - containerPort: 4040
              protocol: TCP
            - containerPort: 4041
              protocol: TCP
            - containerPort: 18080
              protocol: TCP
            - containerPort: 5555
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 7077
              protocol: TCP
      restartPolicy: Always
